--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
 
-                <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                <!-- uso di v-for e v-bind per inserire le immagini, i testi e i titoli -->
+                <div class="item" v-for="(slidesImage, index) in slides" :key="index" :class="{ active: index === activeImage }">
+                    
+                    <img :src="slidesImage.image" alt="slidesImage.title" />
                     <div class="text">
-                        <h3>Spiderman</h3>
+                        <h3> {{ slidesImage.title }} </h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
+                            {{ slidesImage.text }}
                         </p>
                     </div>
                 </div>
@@ -37,20 +36,10 @@
                 <div class="thumbs">
                     <div class="prev"></div>
                     <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.webp" alt="Ratchet & Clank" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.webp" alt="Fortnite" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.webp" alt="Stray" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.webp" alt="Avengers" />
+
+                    <!-- uso di v-for e v-bind per inserire le anteprime -->
+                    <div class="thumb" v-for="(thumb, index) in slides" :key="index" :class="{ active: index === activeImage }">
+                        <img :src="thumb.image" :alt="thumb.title" />
                     </div>
                 </div>
 
